--- a/argo/secret.yaml
+++ b/argo/secret.yaml
@@ -1,9 +1,8 @@
-kind: Secret
 apiVersion: v1
+kind: Secret
 metadata:
-  name: test-secret
-  annotations:
-    avp.kubernetes.io/path: ""
+  name: my-app-secret
+  namespace: my-app
 type: Opaque
 stringData:
-  password: <amq-secret>
+  password: <path:amq-user#value>
