--- a/secret.yaml
+++ b/secret.yaml
@@ -1,9 +1,9 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: secret-demo
+  name: test-secret
   annotations:
     avp.kubernetes.io/path: "keyvault"
 type: Opaque
 data:
-  password: <path:keyvault#amq-user>
+  password: <amq-user>
