--- a/argo/secret.yaml
+++ b/argo/secret.yaml
@@ -1,7 +1,9 @@
-apiVersion: v1
 kind: Secret
+apiVersion: v1
 metadata:
-  name: my-app-secret
+  name: test-secret
+  annotations:
+    avp.kubernetes.io/path: "keyvault"
 type: Opaque
-stringData:
-  password: <path:amq-user#value>
+data:
+  password: <amq-user>
