--- a/argo/secret.yaml
+++ b/argo/secret.yaml
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: test-secret
+  name: my-app-secret
   annotations:
     avp.kubernetes.io/path: "keyvault"
 type: Opaque
