--- a/argo/secret.yaml
+++ b/argo/secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: my-app-secret
   annotations:
-    avp.kubernetes.io/path: "keyvault"
+    avp.kubernetes.io/path: ""
 type: Opaque
 stringData:
   password: <amq-user>
